--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -21,6 +21,7 @@ By defining likely contexts for significant priming effects they might finally e
 \renewcommand{\lsISBNsoftcover}{000-0-000000-00-0}
 \renewcommand{\lsISBNsoftcoverus}{000-0-000000-00-0}
 \renewcommand{\lsSeries}{lv} % use lowercase acronym, e.g. sidl, eotms, tgdi
+\renewcommand{\lsID}{210} % use lowercase acronym, e.g. sidl, eotms, tgdi
 \renewcommand{\lsSeriesNumber}{99} %will be assigned when the book enters the proofreading stage
 % \renewcommand{\lsURL}{http://langsci-press.org/catalog/book/000} % contact the coordinator for the right number
 
