--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
   modfonts,
   colorlinks,
   citecolor=brown,
-showindex
+% showindex
 		  ]{langsci/langscibook}    
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -90,6 +90,7 @@ showindex
 
 \include{localseealso} 
 % There is normally no need to change the backmatter section
+\sloppy
 \include{backmatter} 
 \end{document} 
 
