--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
   modfonts,
   colorlinks,
   citecolor=brown,
-% showindex
+showindex
 		  ]{langsci/langscibook}    
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
