--- a/main.tex
+++ b/main.tex
@@ -59,26 +59,26 @@ showindex
 
 \include{chapters/introduction}
 \include{chapters/history}
-\include{chapters/variables}
-\include{chapters/salience}
+%\include{chapters/variables}
+%\include{chapters/salience}
+%%
+%\include{chapters/production-method}
+%\include{chapters/production-results-vow}
+%\include{chapters/production-results-con}
+%\include{chapters/production-results-qual}
+%\include{chapters/production-discussion}
+%%
+%\include{chapters/perception-method}
+%\include{chapters/perception-results}
+%\include{chapters/perception-discussion}
+%\include{chapters/conclusion}
 %
-\include{chapters/production-method}
-\include{chapters/production-results-vow}
-\include{chapters/production-results-con}
-\include{chapters/production-results-qual}
-\include{chapters/production-discussion}
+%\appendix
 %
-\include{chapters/perception-method}
-\include{chapters/perception-results}
-\include{chapters/perception-discussion}
-\include{chapters/conclusion}
-
-\appendix
-
-\include{chapters/questionnaire}
-\include{chapters/reading}
-\include{chapters/list}
-\include{chapters/stimuli}
+%\include{chapters/questionnaire}
+%\include{chapters/reading}
+%\include{chapters/list}
+%\include{chapters/stimuli}
 
 % % copy the lines above and adapt as necessary
 
