comments implemented step 2
chapter "Variables"

--- a/main.tex
+++ b/main.tex
@@ -58,8 +58,8 @@ showindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \include{chapters/introduction}
-\include{chapters/history}
-%\include{chapters/variables}
+%\include{chapters/history}
+\include{chapters/variables}
 %\include{chapters/salience}
 %%
 %\include{chapters/production-method}
