comments implemented step 3
Salience, Production part

--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@ showindex
 
 \include{chapters/introduction}
 %\include{chapters/history}
-\include{chapters/variables}
+%\include{chapters/variables}
 %\include{chapters/salience}
 %%
 %\include{chapters/production-method}
