comments implemented step 5
Bibliography updated (capitalisation)

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,6 +1,6 @@
 @article{kendallfridland2017,
 	author={Kendall, Tyler and Fridland, Valerie},
-	title={Regional relationships among the low vowels of U.S. English: Evidence from production and perception},
+	title={Regional relationships among the low vowels of {U}.{S}. {E}nglish: {E}vidence from production and perception},
 	journal={Language Variation and Change},
 	year={2017},
 	volume={29},
@@ -9,10 +9,10 @@
 
 @incollection{groheetal2017,
 	author={Grohe, Ann-Kathrin and Weber, Andrea},
-	title={The Penefit of Salience: Salient Accented, but not Unaccented Words Reveal Accent Adaptation Effects},
+	title={The Penefit of Salience: {S}alient Accented, but not Unaccented Words Reveal Accent Adaptation Effects},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={72--88},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -20,10 +20,10 @@
 
 @incollection{jensen2017,
 	author={Jensen, Marie M.},
-	title={Linking Place and Mind: Localness as a Factor in Socio-Cognitive Salience},
+	title={Linking Place and Mind: {L}ocalness as a Factor in Socio-Cognitive Salience},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={59--71},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -34,7 +34,7 @@
 	title={Estimating the Relative Sociolinguistic Salience of Segmental Variables in a	Dialect Boundary Zone},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={41--58},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -42,10 +42,10 @@
 
 @incollection{jaegeretal2017,
 	author={Jaeger, T. Florian and Weatherholtz, Kodi},
-	title={What the Heck Is Salience? How Predictive Language Processing Contributes to Sociolinguistic Perception},
+	title={What the Heck Is Salience? {H}ow Predictive Language Processing Contributes to Sociolinguistic Perception},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={36--40},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -56,7 +56,7 @@
 	title={Toward a Unified Socio-Cognitive Framework for Salience in Language},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={32--35},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -64,10 +64,10 @@
 
 @incollection{Giraudoetal2017,
 	author={Giraudo, Hélène and Dal Maso, Serena},
-	title={The Salience of Complex Words and Their Parts: Which Comes First?},
+	title={The Salience of Complex Words and Their Parts: {W}hich Comes First?},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={24--31},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -78,7 +78,7 @@
 	title={Salience and Attention in Surprisal-Based Accounts of Language Processing},
 	date={2017},
 	editor={Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	booktitle={Perceptual Linguistic Salience: Modeling Causes and Consequences},
+	booktitle={Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	pages={7--23},
 	publisher={Frontiers Media},
 	location={Lausanne}
@@ -102,7 +102,7 @@
 
 @book{lehiste1964,
 	author = {Lehiste, Ilse},
-	title = {Acoustical characteristics of selected English consonants},
+	title = {Acoustical characteristics of selected {E}nglish consonants},
 	date = {1964},
 	publisher = {Indiana University},
 	location = {Bloomington, IN}
@@ -148,7 +148,7 @@
 @incollection{stoddartetal1999,
 	crossref={foulkesdocherty1999},
 	author={Stoddart, Jana and Upton, Clive and Widdowson, J. D. A.},
-	title={Sheffield dialect in the 1990s: Revisiting the concept of NORMs},
+	title={Sheffield dialect in the 1990s: {R}evisiting the concept of {NORM}s},
 	pages={72--89},
 	chaper={4}
 }
@@ -159,7 +159,7 @@
 	border},
 	date={2015},
 	editor={Hickey, Raymond},
-	booktitle={Researching Northern English},
+	booktitle={Researching {N}orthern {E}nglish},
 	pages={317--341},
 	publisher={Benjamins},
 	location={Amsterdam}
@@ -194,7 +194,7 @@
 
 @phdthesis{langstrofdiss,
 	author = {Langstrof, Christian},
-	title = {Vowel Change in New Zealand English-Patterns and Implications},
+	title = {Vowel Change in {N}ew {Z}ealand {E}nglish---Patterns and Implications},
 	school = {University of Canterbury},
 	year = {2006},
 	url = {http://christianlangstrof.org/publications/langstrofthesis.pdf},
@@ -203,7 +203,7 @@
 
 @article{heuvenetal2014,
 	author = {Van Heuven, W.J.B. and Mandera, P. and Keuleers, E. and Brysbaert, M.},
-	title = {Subtlex-UK: {A} new and improved word frequency database for British English},
+	title = {Subtlex-UK: {A} new and improved word frequency database for {B}ritish {E}nglish},
 	journaltitle = {Quarterly Journal of Experimental Psychology},
 	date = {2014},
 	volume = {67},
@@ -263,7 +263,7 @@
 @article{herr1986,
 	author={Herr, Paul M.},
 	year={1986},
-	title={Consequences of priming: judgment and behavior},
+	title={Consequences of priming: {J}udgment and behavior},
 	journal={Journal of Personality and Social Psychology},
 	volume={51},
 	number={6},
@@ -282,7 +282,7 @@
 
 @phdthesis{watts2006,
 	author = {Watts, Emma L.},
-	title = {Mobility-induced dialect contact: {A} sociolinguistic investigation of speech variation in Wilmslow, Cheshire},
+	title = {Mobility-induced dialect contact: {A} sociolinguistic investigation of speech variation in {W}ilmslow, {C}heshire},
 	publisher = {University of Essex},
 	year = {2006}
 }
@@ -337,7 +337,7 @@
 @article{squires2013,
 	author={Squires, Lauren},
 	year={2013},
-	title={It don't go both ways: Limited bidirectionality in sociolinguistic perception},
+	title={It don't go both ways: {L}imited bidirectionality in sociolinguistic perception},
 	journal={Journal of Sociolinguistics},
 	volume={17},
 	number={2},
@@ -390,7 +390,7 @@
 
 @article{juskanaccentrevivallipp,
 	author = {Juskan, Marten},
-	title = {Selective accent revival in Liverpool},
+	title = {Selective accent revival in {L}iverpool},
 	journaltitle = {JournaLIPP},
 	date = {2015},
 	volume = {4},
@@ -476,7 +476,7 @@
 
 @Article{plyr,
 	title = {The Split-Apply-Combine Strategy for Data Analysis},
-	author = {Hadley Wickham},
+	author = {Wickham, Hadley},
 	journal = {Journal of Statistical Software},
 	year = {2011},
 	volume = {40},
@@ -487,14 +487,14 @@
 
 @Manual{ggsubplot,
 	title = {ggsubplot: {E}xplore complex data by embedding subplots within plots.},
-	author = {Garrett Grolemund and Hadley Wickham},
+	author = {Grolemund, Garrett and Wickham, Hadley},
 	year = {2013},
 	note = {R package version 0.3.2},
 	url = {http://CRAN.R-project.org/package=ggsubplot},
 }
 
 @Article{ggmap,
-	author = {David Kahle and Hadley Wickham},
+	author = {Kahle, David and Wickham, Hadley},
 	title = {ggmap: {S}patial Visualization with ggplot2},
 	journal = {The R Journal},
 	year = {2013},
@@ -505,9 +505,10 @@
 }
 
 @Book{ggplot2,
-	author = {Hadley Wickham},
+	author = {Wickham, Hadley},
 	title = {ggplot2: {E}legant graphics for data analysis},
-	publisher = {Springer New York},
+	publisher = {Springer},
+	location = {New York},
 	year = {2009},
 	isbn = {978-0-387-98140-6},
 	url = {http://had.co.nz/ggplot2/book},
@@ -533,7 +534,7 @@
 }
 
 @Misc{Rordinal,
-	title = {ordinal---Regression Models for Ordinal Data },
+	title = {{O}rdinal---Regression Models for Ordinal Data},
 	author = {R. H. B. Christensen},
 	year = {2015},
 	note = {R package version 2015.6-28. http://www.cran.r-project.org/package=ordinal/},
@@ -542,8 +543,8 @@
 @incollection{halford2002,
 	author = {Halford, Brigitte K.},
 	editor = {Allerton, David John},
-	title = {Canadian English: {D}istinct in North America?},
-	booktitle = {Perspectives on English as a world language},
+	title = {Canadian {E}nglish: {D}istinct in {N}orth {A}merica?},
+	booktitle = {Perspectives on {E}nglish as a world language},
 	date = {2002},
 	publisher = {Schwabe},
 	location = {Basel},
@@ -615,7 +616,7 @@
 
 @book{troughton1810,
 	author = {Troughton, Thomas},
-	title = {History of Liverpool},
+	title = {History of {L}iverpool},
 	subtitle = {From the Earliest Authenticated Period down to the Present Time},
 	date = {1810},
 	publisher = {Robinson},
@@ -624,8 +625,8 @@
 
 @book{anon1812,
 	author = {Anon},
-	title = {The Stranger in Liverpool},
-	subtitle = {Or, an Historical and Descriptive View of the Town of Liverpool and its Environs},
+	title = {The Stranger in {L}iverpool},
+	subtitle = {Or, an Historical and Descriptive View of the Town of {L}iverpool and its Environs},
 	date = {1812},
 	publisher = {Kaye},
 	location = {Liverpool}
@@ -722,8 +723,8 @@
 @incollection{baranowskiturton2015,
 	author = {Baranowski, Maciej and Turton, Danielle},
 	editor = {Hickey, Raymond},
-	title = {Manchester English},
-	booktitle = {Researching Northern English},
+	title = {Manchester {E}nglish},
+	booktitle = {Researching {N}orthern {E}nglish},
 	date = {2015},
 	publisher = {John Benjamins},
 	location = {Amsterdam},
@@ -839,7 +840,7 @@
 
 @INPROCEEDINGS{kerswill2002modelsof,
 	author = {Paul Kerswill},
-	title = {Models of linguistic change and diffusion: {N}ew evidence from dialect levelling in British English},
+	title = {Models of linguistic change and diffusion: {N}ew evidence from dialect levelling in {B}ritish {E}nglish},
 	booktitle = {University of Reading},
 	year = {2002}
 }
@@ -867,8 +868,8 @@
 
 @inproceedings{jannedyetal2011,
 	author = {Jannedy, Stefanie and Weirich, Melanie and Brunner, Jana},
-	title = {The Effect of Inferences on the Perceptual Categorization of Berlin German Fricatives},
-	booktitle = {Proceedings of the International Congress of Phonetic Sciences},
+	title = {The Effect of Inferences on the Perceptual Categorization of {B}erlin {G}erman Fricatives},
+	booktitle = {Proceedings of the {I}nternational {C}ongress of {P}honetic {S}ciences},
 	date = {2011},
 	location = {Hong Kong},
 	pages = {962--965}
@@ -1039,7 +1040,7 @@
 
 @article{syrdalgopal1986,
 	author = {Syrdal, Ann K. and Gopal, H. S.},
-	title = {A perceptual model of vowel recognition based on the auditory representation of American English vowels},
+	title = {A perceptual model of vowel recognition based on the auditory representation of {A}merican {E}nglish vowels},
 	journaltitle = {Journal of the Acoustical Society of America},
 	date = {1986},
 	volume = {79},
@@ -1048,7 +1049,7 @@
 
 @article{lobanov1971,
 	author = {Lobanov, Boris M.},
-	title = {Classification of Russian vowels spoken by different speakers},
+	title = {Classification of {R}ussian vowels spoken by different speakers},
 	journaltitle = {Journal of the Acoustical Society of America},
 	date = {1971},
 	volume = {49},
@@ -1152,7 +1153,7 @@
 
 @booklet{garciaetal2010,
 	author = {Garcia, Beatriz and Melville, Ruth and Cox, Tamsin},
-	title = {Creating an impact. {L}iverpool's experience as {E}uropean {C}apital of {C}ulture},
+	title = {Creating an impact: {L}iverpool's experience as {E}uropean {C}apital of {C}ulture},
 	year = {2010},
 	url = {http://www.liv.ac.uk/impacts08/},
 	urldate = {2013-09-03}
@@ -1161,20 +1162,20 @@
 @incollection{belchem2006d,
 	crossref={belchem2006b},
 	author={Belchem, John},
-	title={`An accent exceedingly rare': {S}couse and the inflexion of class},
+	title={`{A}n accent exceedingly rare': {S}couse and the inflexion of class},
 	pages={31--64}
 }
 
 @incollection{belchem2006c,
 	crossref={belchem2006b},
 	author={Belchem, John},
-	title={Introduction: the new `{L}ivercool'},
+	title={Introduction: {T}he new `{L}ivercool'},
 	pages={xi--xxix}
 }
 
 @book{crowley2012,
 	author={Crowley, Tony},
-	title={Scouse: {A} {S}ocial and {C}ultural {H}istory},
+	title={Scouse: {A} Social and Cultural History},
 	publisher={Liverpool University Press},
 	year={2012},
 	address={Liverpool}
@@ -1190,7 +1191,7 @@
 
 @book{harris1985,
 	author={Harris, John},
-	title={Phonological variation and change: studies in {H}iberno-{E}nglish},
+	title={Phonological variation and change: {S}tudies in {H}iberno-{E}nglish},
 	publisher={Cambridge University Press},
 	year={1985},
 	address={Cambridge}
@@ -1199,7 +1200,7 @@
 @incollection{murden2006,
 	crossref={belchem2006},
 	author={Murden, Jon},
-	title={`City of change and challenge': {L}iverpool since 1945},
+	title={`{C}ity of change and challenge': {L}iverpool since 1945},
 	pages={393--485}
 }
 
@@ -1234,7 +1235,7 @@
 @incollection{pooley2006,
 	crossref={belchem2006},
 	author={Pooley, Colin G.},
-	title={Living in {L}iverpool: the modern city},
+	title={Living in {L}iverpool: {T}he modern city},
 	pages={171--255}
 }
 
@@ -1266,7 +1267,7 @@
 @article{honeybonewatson2013,
 	author={Honeybone, Patrick and Watson, Kevin},
 	year={2013},
-	title={Salience and the sociolinguistics of {S}couse spelling: exploring the phonology of the
+	title={Salience and the sociolinguistics of {S}couse spelling: {E}xploring the phonology of the
 	{C}ontemporary {H}umorous {L}ocalised {D}ialect {L}iterature of {L}iverpool},
 	journal={English World-Wide},
 	volume={34},
@@ -1277,7 +1278,7 @@
 @article{johnstoneetal2006,
 	author={Johnstone, Barbara and Andrus, Jennifer and Danielson, Andrew},
 	year={2006},
-	title={Mobility, indexicality and the enregisterment of `Pittsburghese'},
+	title={Mobility, indexicality and the enregisterment of `{P}ittsburghese'},
 	journal={Journal of English Linguistics},
 	volume={34},
 	number={2},
@@ -1361,7 +1362,7 @@
 @incollection{kerswillwilliams2002,
 	crossref={jones2002},
 	author={Kerswill, Paul and Williams, Ann},
-	title={Salience as an explanatory factor in language change: evidence from dialect levelling in urban {E}ngland},
+	title={Salience as an explanatory factor in language change: {E}vidence from dialect levelling in urban {E}ngland},
 	pages={81--110}
 }
 
@@ -1370,7 +1371,7 @@
 	year={2003},
 	title={Dialect levelling and geographical diffusion in {B}ritish {E}nglish},
 	editor={Britain, David and Cheshire, Jenny},
-	booktitle={Social {D}ialectology. In honour of Peter Trudgill},
+	booktitle={Social Dialectology: {I}n honour of {P}eter {T}rudgill},
 	address={Amsterdam},
 	publisher={Benjamins},
 	pages={223--243}
@@ -1437,7 +1438,7 @@
 
 @mastersthesis{drager2005,
 	author={Drager, Katie},
-	title={Social effects on the perception of DRESS and TRAP in New Zealand English},
+	title={Social effects on the perception of DRESS and TRAP in {N}ew {Z}ealand {E}nglish},
 	school={University of Canterbury},
 	year={2005},
 	type={Unpublished Master thesis}
@@ -1501,7 +1502,7 @@
 @incollection{watson2007a,
 	crossref={grantgrey2007},
 	author={Watson, Kevin},
-	title={Is {S}couse getting {S}couser? Phonological change in contemporary {L}iverpool {E}nglish},
+	title={Is {S}couse getting {S}couser? {P}honological change in contemporary {L}iverpool {E}nglish},
 	pages={215--241}
 }
 
@@ -1517,7 +1518,7 @@
 
 @phdthesis{knowles1973,
 	author = {Knowles, Gerald O.},
-	title = {Scouse: {T}he urban dialect of Liverpool},
+	title = {Scouse: {T}he urban dialect of {L}iverpool},
 	school = {University of Leeds. Department of English Language and Medieval English Literature},
 	publisher = {University of Leeds},
 	year = {1973}
@@ -1532,7 +1533,7 @@
 
 @book{knowles1997,
 	author={Knowles, Gerald O.},
-	title={A Cultural History of the English Language},
+	title={A Cultural History of the {E}nglish Language},
 	publisher={Arnold},
 	year={1997},
 	address={London}
@@ -1568,7 +1569,7 @@
 	editor = {Gibbon, Dafydd},
 	title = {Gradient and visual speaker normalization in the
 	perception of fricatives},
-	booktitle = {Natural language processing and speech	technology: {R}esults of the 3rd KONVENS conference, Bielefeld, October 1996},
+	booktitle = {Natural language processing and speech	technology: {R}esults of the 3rd {KONVENS} conference, {B}ielefeld, {O}ctober 1996},
 	date = {1996},
 	address = {Berlin},
 	publisher = {Mouton},
@@ -1586,7 +1587,7 @@
 
 @phdthesis{montgomery2007,
 	month = {1},
-	title = {Northern English Dialects: {A} perceptual approach},
+	title = {Northern {E}nglish Dialects: {A} perceptual approach},
 	school = {University of Sheffield},
 	author = {Montgomery, Chris},
 	publisher = {University of Sheffield},
@@ -1603,7 +1604,8 @@
 
 @book{wales2006,
 	author={Wales, Katie},
-	title={Northern English: {A} Cultural and Social History},
+	title={Northern {E}nglish},
+	subtitle = {A Cultural and Social History},
 	publisher={CUP},
 	year={2006},
 	address={Cambridge}
@@ -1627,7 +1629,8 @@
 
 @book{trudgill2004,
 	author={Trudgill, Peter},
-	title={New-dialect formation: the inevitability of colonial {E}nglishes},
+	title={New-dialect formation},
+	subtitle = {The inevitability of colonial {E}nglishes},
 	publisher={Edinburgh University Press},
 	year={2004},
 	address={Edinburgh}
@@ -1635,7 +1638,7 @@
 
 @book{trudgill1999,
 	author={Trudgill, Peter},
-	title={The Dialects of England},
+	title={The Dialects of {E}ngland},
 	publisher={Blackwell},
 	year={1999},
 	address={Oxford},
@@ -1644,7 +1647,7 @@
 
 @book{beal2010,
 	author={Beal, Joan C.},
-	title={An Introduction to Regional Englishes: Dialect Variation in England},
+	title={An Introduction to Regional {E}nglishes: {D}ialect Variation in {E}ngland},
 	publisher={Edinburgh University Press},
 	year={2010},
 	address={Edinburgh}
@@ -1697,7 +1700,7 @@
 
 @book{labovetal2006,
 	author={Labov, William and Ash, Sharon and Boberg, Charles},
-	title={The Atlas of North American English: Phonology, Phonetics, and Sound Change. A Multimedia Reference Tool},
+	title={The {A}tlas of {N}orth {A}merican {E}nglish: {P}honology, Phonetics, and Sound Change. {A} Multimedia Reference Tool},
 	publisher={Mouton de Gruyter},
 	year={2006},
 	address={Berlin}
@@ -1705,7 +1708,7 @@
 
 @book{hohenberglees1985,
 	author={Hohenberg, Paul M. and Lees, Lynn Hollen},
-	title={The Making of Urban Europe 1000--1950},
+	title={The Making of Urban {E}urope 1000--1950},
 	publisher={Harvard University Press},
 	year={1985},
 	address={Cambridge, MA and London, England},
@@ -1715,7 +1718,7 @@
 @incollection{honeybone2007,
 	crossref={grantgrey2007},
 	author={Honeybone, Patrick},
-	title={New-dialect formation in nineteenth century {L}iverpool: A brief history of {S}couse},
+	title={New-dialect formation in nineteenth century {L}iverpool: {A} brief history of {S}couse},
 	pages={106--140}
 }
 
@@ -1740,7 +1743,7 @@
 @incollection{parkinson1990,
 	crossref={juddparkinson1990},
 	author={Parkinson, Michael},
-	title={Leadership and regeneration in {L}iverpool: Confusion, confrontation, or coalition?},
+	title={Leadership and regeneration in {L}iverpool: {C}onfusion, confrontation, or coalition?},
 	pages={241--257},
 	chaper={12}
 }
@@ -1820,7 +1823,7 @@
 @incollection{newbrook1999,
 	crossref={foulkesdocherty1999},
 	author={Newbrook, Mark},
-	title={{W}est {W}irral: norms, self reports and usage},
+	title={{W}est {W}irral: {N}orms, self reports and usage},
 	pages={90--106},
 	chaper={5}
 }
@@ -1828,15 +1831,15 @@
 @incollection{hickey1999,
 	crossref={foulkesdocherty1999},
 	author={Hickey, Raymond},
-	title={Dublin {E}nglish: current changes and their motivation},
+	title={Dublin {E}nglish: {C}urrent changes and their motivation},
 	pages={265--281},
 	chaper={15}
 }
 
 @book{couchfraser2003,
 	editor={Couch, Chris and Fraser, Charles and Percy, Susan},
-	booktitle={Urban Regeneration in Europe},
-	title={Urban Regeneration in Europe},
+	booktitle={Urban Regeneration in {E}urope},
+	title={Urban Regeneration in {E}urope},
 	publisher={Blackwell Science},
 	year={2003},
 	address={Oxford}
@@ -1844,8 +1847,8 @@
 
 @book{trudgill1978,
 	editor={Trudgill, Peter},
-	booktitle={Sociolinguistic Patterns in British English},
-	title={Sociolinguistic Patterns in British English},
+	booktitle={Sociolinguistic Patterns in {B}ritish {E}nglish},
+	title={Sociolinguistic Patterns in {B}ritish {E}nglish},
 	publisher={Arnold},
 	year={1978},
 	address={London}
@@ -1864,8 +1867,8 @@
 
 @book{foulkesdocherty1999,
 	editor={Foulkes, Paul and Docherty, Gerard J.},
-	booktitle={Urban Voices: Accent Studies in the {B}ritish {I}sles},
-	title={Urban Voices: Accent Studies in the {B}ritish {I}sles},
+	booktitle={Urban Voices: {A}ccent Studies in the {B}ritish {I}sles},
+	title={Urban Voices: {A}ccent Studies in the {B}ritish {I}sles},
 	publisher={Arnold},
 	year={1999},
 	address={London}
@@ -1873,8 +1876,8 @@
 
 @book{grantgrey2007,
 	editor={Grant, Anthony and Grey, Clive},
-	booktitle={The Mersey Sound: Liverpool's Language, People and Places},
-	title={The Mersey Sound: Liverpool's Language, People and Places},
+	booktitle={The {M}ersey Sound: {L}iverpool's Language, People and Places},
+	title={The {M}ersey Sound: {L}iverpool's Language, People and Places},
 	publisher={Open House Press},
 	year={2007},
 	address={Liverpool}
@@ -1900,7 +1903,7 @@
 
 @book{jones2002,
 	editor={Jones, Mari C.},
-	booktitle={Language Change: The Interplay of Internal, External and Extra-Linguistic Factors},
+	booktitle={Language Change: {T}he Interplay of Internal, External and Extra-Linguistic Factors},
 	title={Language Change: The Interplay of Internal, External and Extra-Linguistic Factors},
 	publisher={Mouton de Gruyter},
 	year={2002},
@@ -1918,8 +1921,8 @@
 
 @book{krefeldpustka2010,
 	editor={Krefeld, Thomas and Pustka, Elissa},
-	booktitle={Perzeptive Varietätenlinguistik},
-	title={Perzeptive Varietätenlinguistik},
+	booktitle={Perzeptive {V}arietätenlinguistik},
+	title={Perzeptive {V}arietätenlinguistik},
 	publisher={Lang},
 	year={2010},
 	address={Frankfurt am Main}
@@ -1927,8 +1930,8 @@
 
 @book{belchem2006,
 	editor={Belchem, John},
-	booktitle={Liverpool 800: {C}ulture, {C}haracter and {H}istory},
-	title={Liverpool 800: {C}ulture, {C}haracter and {H}istory},
+	booktitle={Liverpool 800: {C}ulture, Character and History},
+	title={Liverpool 800: {C}ulture, Character and History},
 	publisher={Liverpool University Press},
 	year={2006},
 	address={Liverpool}
@@ -1936,8 +1939,8 @@
 
 @book{belchem2006b,
 	author={Belchem, John},
-	booktitle={Merseypride: {E}ssays in {L}iverpool {E}xceptionalism},
-	title={Merseypride: {E}ssays in {L}iverpool {E}xceptionalism},
+	booktitle={Merseypride: {E}ssays in {L}iverpool Exceptionalism},
+	title={Merseypride: {E}ssays in {L}iverpool Exceptionalism},
 	publisher={Liverpool University Press},
 	year={2006},
 	address={Liverpool},
