comments implemented step 6
new update bibliography

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -111,7 +111,7 @@
 @online{gbhistgis,
 	author = {{GB Historical GIS}},
 	editor = {{University of Portsmouth}},
-	title = {A Vision of Britain through Time},
+	title = {A Vision of {B}ritain through Time},
 	date = {2009/2014},
 	url = {http://www.visionofbritain.org.uk},
 	urldate = {2016-01-19}
@@ -324,7 +324,7 @@
 	author = {Lawrence, Daniel},
 	editor = {The Scottish Consortium for ICPhS 2015},
 	title = {Limited evidence for social priming in the perception of the \textsc{bath} and \textsc{strut} vowels},
-	booktitle = {Proceedings of the 18th International Congress of Phonetic Sciences},
+	booktitle = {Proceedings of the 18th {I}nternational {C}ongress of {P}honetic {S}ciences},
 	date = {2015},
 	note = {Paper number 244},
 	publisher = {University of Glasgow},
@@ -661,7 +661,7 @@
 @article{auer2014,
 	author={Auer, Peter},
 	year={2014},
-	title={Anmerkungen zum Salienzbegriff in der Soziolinguistik},
+	title={Anmerkungen zum {S}alienzbegriff in der {S}oziolinguistik},
 	journal={Linguistik online},
 	volume={66},
 	number={4},
@@ -1117,7 +1117,7 @@
 
 @article{wattfabricius2002,
 	author = {Watt, Dominic and Fabricius, Anne},
-	title = {Evaluation of a technique for improving the mapping of multiple speakers' vowel spaces in the F1\(\sim\)F2 plane},
+	title = {Evaluation of a technique for improving the mapping of multiple speakers' vowel spaces in the {F}1\(\sim\){F}2 plane},
 	journaltitle = {Leeds Working Papers in Linguistics and Phonetics},
 	date = {2002},
 	volume = {9},
@@ -1308,7 +1308,7 @@
 @article{harringtonetal2000b,
 	author={Harrington, Jonathan and Palethorpe, Sallyanne and Watson, Catherine},
 	year={2000},
-	title={Monophthongal vowel changes in Received Pronunciation. an acoustic analysis of the Queen's Christmas broadcasts},
+	title={Monophthongal vowel changes in {R}eceived {P}ronunciation. an acoustic analysis of the Queen's Christmas broadcasts},
 	journal={Journal of the Internation Phonetic Association},
 	volume={30},
 	pages={63--78} 
@@ -1412,7 +1412,7 @@
 @article{hayetal2006a,
 	author={Hay, Jennifer and Nolan, Aaron and Drager, Katie},
 	year={2006},
-	title={From fush to feesh: Exemplar priming in speech perception},
+	title={From fush to feesh: {E}xemplar priming in speech perception},
 	journal={The Linguistic Review},
 	volume={23},
 	pages={351--379}
@@ -1642,7 +1642,7 @@
 	publisher={Blackwell},
 	year={1999},
 	address={Oxford},
-	edition={Second}
+	edition={Second edition}
 }
 
 @book{beal2010,
@@ -1944,13 +1944,13 @@
 	publisher={Liverpool University Press},
 	year={2006},
 	address={Liverpool},
-	edition={Second}
+	edition={Second edition}
 }
 
 @book{petersensix2008,
 	editor={Petersen, Lars-Eric and Bernd Six},
-	booktitle={Stereotype, {V}orurteile und soziale {D}iskriminierung. Theorien, {B}efunde und {I}nterventionen},
-	title={Stereotype, {V}orurteile und soziale {D}iskriminierung. Theorien, {B}efunde und {I}nterventionen},
+	booktitle={Stereotype, {V}orurteile und soziale {D}iskriminierung. {T}heorien, {B}efunde und {I}nterventionen},
+	title={Stereotype, {V}orurteile und soziale {D}iskriminierung. {T}heorien, {B}efunde und {I}nterventionen},
 	publisher={Beltz},
 	year={2008},
 	address={Basel}
