--- a/main.tex
+++ b/main.tex
@@ -57,28 +57,28 @@ showindex
 %%%                                              %%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\include{chapters/introduction}
-%\include{chapters/history}
-%\include{chapters/variables}
-%\include{chapters/salience}
-%
-%\include{chapters/production-method}
-%\include{chapters/production-results-vow} %check indexing
-%\include{chapters/production-results-con} %check indexing
-%\include{chapters/production-results-qual} %check indexing
-%\include{chapters/production-discussion}
-%
-\include{chapters/perception-method} %check indexing
-\include{chapters/perception-results} %check indexing
+\include{chapters/introduction}
+\include{chapters/history}
+\include{chapters/variables}
+\include{chapters/salience}
+
+\include{chapters/production-method}
+\include{chapters/production-results-vow}
+\include{chapters/production-results-con}
+\include{chapters/production-results-qual}
+\include{chapters/production-discussion}
+
+\include{chapters/perception-method}
+\include{chapters/perception-results}
 \include{chapters/perception-discussion} %check indexing
 \include{chapters/conclusion}
-%
-%\appendix
-%
-%\include{chapters/questionnaire}
-%\include{chapters/reading}
-%\include{chapters/list}
-%\include{chapters/stimuli}
+
+\appendix
+
+\include{chapters/questionnaire}
+\include{chapters/reading}
+\include{chapters/list}
+\include{chapters/stimuli}
 
 % % copy the lines above and adapt as necessary
 
