--- a/main.tex
+++ b/main.tex
@@ -70,7 +70,7 @@ showindex
 
 \include{chapters/perception-method}
 \include{chapters/perception-results}
-\include{chapters/perception-discussion} %check indexing
+\include{chapters/perception-discussion}
 \include{chapters/conclusion}
 
 \appendix
