--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -86,7 +86,7 @@
 
 @book{blumenthaletal2017,
 	editor = {Blumenthal-Dramé, Alice and Hanulíková, Adriana and Kortmann, Bernd},
-	title = {Perceptual Linguistic Salience: {M}odeling Causes and Consequences}},
+	title = {Perceptual Linguistic Salience: {M}odeling Causes and Consequences},
 	date = {2017},
 	publisher = {Frontiers Media},
 	location = {Lausanne}
