--- a/main.tex
+++ b/main.tex
@@ -8,12 +8,11 @@
 % Everything following a % is ignored
 % Some lines start with %. Remove the % to include them
 
-\documentclass[output=book,
-  nonflat,
-  modfonts,
-  colorlinks,
-  citecolor=brown,
-showindex
+\documentclass[output=book,nonflat,modfonts,
+  colorlinks,citecolor=brown,
+  showindex,
+  draftmode,
+  draft
 		  ]{langsci/langscibook}    
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
