--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -1,6 +1,5 @@
-\title{Sound Change, Priming, Salience}  %look no further, you can change those things right here.
- \subtitle{Producing and Perceiving Variation in Liverpool English}
-\BackTitle{Sound Change, Priming, Salience} % Change if BackTitle != Title
+\title{Sound change, priming, salience}  %look no further, you can change those things right here.
+ \subtitle{Producing and perceiving bariation in Liverpool English}
 \BackBody{
 This volume investigates the realisation and perception of four phonological variables in Liverpool English (Scouse), with a special focus on their sociolinguistic salience.
 Younger speakers’ speech is found to be more local, but only for the two salient variables in the sample (\textsc{nurse-square} and /k/ lenition), which appear to carry considerable amounts of covert prestige.
@@ -15,10 +14,12 @@ By defining likely contexts for significant priming effects they might finally e
 %\typesetter{Change typesetter in localmetadata.tex}
 %\proofreader{Change proofreaders in localmetadata.tex}
 \author{Marten Juskan}
-% \BookDOI{}%ask coordinator for DOI 
+\BookDOI{10.5281/zenodo.1451308}
 \renewcommand{\lsSeries}{lv} % use lowercase acronym, e.g. sidl, eotms, tgdi
 \renewcommand{\lsID}{210} % use lowercase acronym, e.g. sidl, eotms, tgdi
 \renewcommand{\lsSeriesNumber}{3} %will be assigned when the book enters the proofreading stage 
+\renewcommand{\lsISBNdigital}{978-3-96110-119-1}
+\renewcommand{\lsISBNhardcover}{978-3-96110-120-7}
 
  
  
