frontmatter, typesetting introduction

--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -1,5 +1,5 @@
 \title{Sound change, priming, salience}  %look no further, you can change those things right here.
- \subtitle{Producing and perceiving bariation in Liverpool English}
+ \subtitle{Producing and perceiving variation in Liverpool English}
 \BackBody{
 This volume investigates the realisation and perception of four phonological variables in Liverpool English (Scouse), with a special focus on their sociolinguistic salience.
 Younger speakers’ speech is found to be more local, but only for the two salient variables in the sample (\textsc{nurse-square} and /k/ lenition), which appear to carry considerable amounts of covert prestige.
