--- a/langsci/seriesinfo/lv-info.tex
+++ b/langsci/seriesinfo/lv-info.tex
@@ -11,16 +11,12 @@ In this series:
 
 \begin{enumerate}
 \item Côté, Marie-Hélène, Remco Knooihuizen and John Nerbonne (eds.). The future of dialects.
-\item Schäfer, Lea. 2016. Sprachliche Imitation: Jiddisch in der deutschsprachigen
-Literatur (18.–20. Jahrhundert).
-Press.
+\item Schäfer, Lea. Sprachliche Imitation: Jiddisch in der deutschsprachigen Literatur (18.–20. Jahrhundert). 
+\item Juskan, Marten. Sound change, priming, salience: Producing and perceiving variation in Liverpool English.
 \end{enumerate}
 
 
 
 \vfill
-
-% \gdef\lsISSN{XXXX-YYYY}%
-% \hfill ISSN: \lsISSN
-
+ 
 
