--- a/localcommands.tex
+++ b/localcommands.tex
@@ -1,12 +1,4 @@
-%add all your local new commands to this file
-
-\newcommand{\smiley}{:)}
-
-\renewbibmacro*{index:name}[5]{%
-  \usebibmacro{index:entry}{#1}
-    {\iffieldundef{usera}{}{\thefield{usera}\actualoperator}\mkbibindexname{#2}{#3}{#4}{#5}}}
-
-% \newcommand{\noop}[1]{}
+ 
 
 \makeatletter
 \def\blx@maxline{77}
@@ -17,3 +9,5 @@
 \newcommand{\regel}[1]{#1}
 \newcommand{\vernacular}[1]{\emph{#1}}
 \newcommand{\gloss}[1]{#1}
+
+\newcommand{\isit}[1]{#1\is{#1}}
