--- a/localpackages.tex
+++ b/localpackages.tex
@@ -1,39 +1,24 @@
-% add all extra packages you need to load to this file  
 \usepackage{tabularx} 
 \usepackage{polyglossia} % language settings (line breaking etc.)
 	\setdefaultlanguage[variant = british]{english}
 \usepackage[autostyle=true]{csquotes}
-
-\usepackage{graphicx} % picture embedding
-\usepackage{float}
+% \usepackage{float}
 \usepackage{tikz} % drawing of vector graphics
 \usetikzlibrary{positioning,calc}
-\usepackage{multirow} % multirow cells in tables
-\usepackage{multicol}
+% \usepackage{multirow} % multirow cells in tables
+% \usepackage{multicol}
 \usepackage{paralist} % for inline lists
 \usepackage[normalem]{ulem}
-\usepackage{covington}
+% \usepackage{covington}
 \usepackage{pdfpages} % needed for including the cover generated as a separate document
 \usepackage{longtable}
 \usepackage{caption} % graphics caption
 \usepackage{subcaption} % sub-graphics with sub-captions
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%%                                              %%%
-%%%           Examples                           %%%
-%%%                                              %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%% to add additional information to the right of examples, uncomment the following line
-% \usepackage{jambox}
-%% if you want the source line of examples to be in italics, uncomment the following line
-% \renewcommand{\exfont}{\itshape}
 \usepackage{./langsci/styles/langsci-optional}
 \usepackage{./langsci/styles/langsci-gb4e}
 \usepackage{./langsci/styles/langsci-lgr}
 \usepackage{./langsci/styles/langsci-glyphs}
 
 \usepackage[english]{babel}
- 
-% \usepackage[hang,flushmargin]{footmisc}
-% \setlength\footnotemargin{10pt}
-
+  
  
