--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
   colorlinks,citecolor=brown,
 %   showindex,
   draftmode,
-%   draft
+  draft
 		  ]{langsci/langscibook}    
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
@@ -14,6 +14,26 @@
 \input{localhyphenation.tex}
 \bibliography{localbibliography} 
  
+% \includeonly{ 
+% chapters/acknowledgements,
+% chapters/introduction,
+% chapters/history,
+% chapters/variables,
+% chapters/salience,
+% chapters/production-method,
+% chapters/production-results-vow,
+% chapters/production-results-con,
+% chapters/production-results-qual
+% chapters/production-discussion,
+% chapters/perception-method,
+% chapters/perception-results,
+% chapters/perception-discussion,
+% chapters/conclusion,
+% chapters/questionnaire,
+% chapters/reading,
+% chapters/list,
+% chapters/stimuli
+% } 
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
@@ -33,28 +53,28 @@
 %%%             Chapters                         %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\include{chapters/introduction}
+% \include{chapters/introduction}
 \include{chapters/history}
-\include{chapters/variables}
-\include{chapters/salience}
-
-\include{chapters/production-method}
-\include{chapters/production-results-vow}
-\include{chapters/production-results-con}
-\include{chapters/production-results-qual}
-\include{chapters/production-discussion}
-
-\include{chapters/perception-method}
-\include{chapters/perception-results}
-\include{chapters/perception-discussion}
-\include{chapters/conclusion}
-
-\appendix
-
-\include{chapters/questionnaire}
-\include{chapters/reading}
-\include{chapters/list}
-\include{chapters/stimuli}
+% \include{chapters/variables}
+% \include{chapters/salience}
+% 
+% \include{chapters/production-method}
+% \include{chapters/production-results-vow}
+% \include{chapters/production-results-con}
+% \include{chapters/production-results-qual}
+% \include{chapters/production-discussion}
+% 
+% \include{chapters/perception-method}
+% \include{chapters/perception-results}
+% \include{chapters/perception-discussion}
+% \include{chapters/conclusion}
+% 
+% \appendix
+% 
+% \include{chapters/questionnaire}
+% \include{chapters/reading}
+% \include{chapters/list}
+% \include{chapters/stimuli}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Backmatter                       %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
