--- a/localcommands.tex
+++ b/localcommands.tex
@@ -11,3 +11,5 @@
 \newcommand{\gloss}[1]{#1}
 
 \newcommand{\isit}[1]{#1\is{#1}}
+
+\newenvironment{example}{\ea}{\z} %replacement for covington environment
