--- a/localpackages.tex
+++ b/localpackages.tex
@@ -5,8 +5,8 @@
 % \usepackage{float}
 \usepackage{tikz} % drawing of vector graphics
 \usetikzlibrary{positioning,calc}
-% \usepackage{multirow} % multirow cells in tables
-% \usepackage{multicol}
+\usepackage{multirow} % multirow cells in tables
+\usepackage{multicol}
 \usepackage{paralist} % for inline lists
 \usepackage[normalem]{ulem}
 % \usepackage{covington}
