--- a/main.tex
+++ b/main.tex
@@ -53,28 +53,28 @@
 %%%             Chapters                         %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \include{chapters/introduction}
+\include{chapters/introduction}
 \include{chapters/history}
-% \include{chapters/variables}
-% \include{chapters/salience}
-% 
-% \include{chapters/production-method}
-% \include{chapters/production-results-vow}
-% \include{chapters/production-results-con}
-% \include{chapters/production-results-qual}
-% \include{chapters/production-discussion}
-% 
-% \include{chapters/perception-method}
-% \include{chapters/perception-results}
-% \include{chapters/perception-discussion}
-% \include{chapters/conclusion}
-% 
-% \appendix
-% 
-% \include{chapters/questionnaire}
-% \include{chapters/reading}
-% \include{chapters/list}
-% \include{chapters/stimuli}
+\include{chapters/variables}
+\include{chapters/salience}
+
+\include{chapters/production-method}
+\include{chapters/production-results-vow}
+\include{chapters/production-results-con}
+\include{chapters/production-results-qual}
+\include{chapters/production-discussion}
+
+\include{chapters/perception-method}
+\include{chapters/perception-results}
+\include{chapters/perception-discussion}
+\include{chapters/conclusion}
+
+\appendix
+
+\include{chapters/questionnaire}
+\include{chapters/reading}
+\include{chapters/list}
+\include{chapters/stimuli}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Backmatter                       %%% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
