--- a/main.tex
+++ b/main.tex
@@ -14,11 +14,11 @@
 \input{localhyphenation.tex}
 \bibliography{localbibliography} 
  
-% \includeonly{ 
+\includeonly{ 
 % chapters/acknowledgements,
 % chapters/introduction,
 % chapters/history,
-% chapters/variables,
+chapters/variables,
 % chapters/salience,
 % chapters/production-method,
 % chapters/production-results-vow,
@@ -33,7 +33,7 @@
 % chapters/reading,
 % chapters/list,
 % chapters/stimuli
-% } 
+} 
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
