--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,8 @@
 % chapters/acknowledgements,
 % chapters/introduction,
 % chapters/history,
-chapters/variables,
-% chapters/salience,
+% chapters/variables,
+chapters/salience,
 % chapters/production-method,
 % chapters/production-results-vow,
 % chapters/production-results-con,
