--- a/main.tex
+++ b/main.tex
@@ -19,8 +19,8 @@
 % chapters/introduction,
 % chapters/history,
 % chapters/variables,
-chapters/salience,
-% chapters/production-method,
+% chapters/salience,
+chapters/production-method,
 % chapters/production-results-vow,
 % chapters/production-results-con,
 % chapters/production-results-qual
