--- a/main.tex
+++ b/main.tex
@@ -14,26 +14,26 @@
 \input{localhyphenation.tex}
 \bibliography{localbibliography} 
  
-\includeonly{ 
-% chapters/acknowledgements,
-% chapters/introduction,
-% chapters/history,
-% chapters/variables,
-% chapters/salience,
-% chapters/production-method,
-chapters/production-results-vow,
-% chapters/production-results-con,
-% chapters/production-results-qual
-% chapters/production-discussion,
-% chapters/perception-method,
-% chapters/perception-results,
-% chapters/perception-discussion,
-% chapters/conclusion,
-% chapters/questionnaire,
-% chapters/reading,
-% chapters/list,
-% chapters/stimuli
-} 
+% \includeonly{ 
+% % chapters/acknowledgements,
+% % chapters/introduction,
+% % chapters/history,
+% % chapters/variables,
+% % chapters/salience,
+% % chapters/production-method,
+% chapters/production-results-vow,
+% % chapters/production-results-con,
+% % chapters/production-results-qual
+% % chapters/production-discussion,
+% % chapters/perception-method,
+% % chapters/perception-results,
+% % chapters/perception-discussion,
+% % chapters/conclusion,
+% % chapters/questionnaire,
+% % chapters/reading,
+% % chapters/list,
+% % chapters/stimuli
+% } 
  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
